# predicting-loan-kaggle

./: README.md  gitignore  mlflow.db  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: config.yaml
configs/model/: catboost.yaml  catboost_tuned.yaml  lightgbm.yaml  xgboost.yaml
mlruns/0/: meta.yaml
mlruns/669644328659289417/: meta.yaml
mlruns/669644328659289417/456a959b7aff402d95823731472b15c8/: meta.yaml
mlruns/669644328659289417/456a959b7aff402d95823731472b15c8/metrics/: auc_fold_1  auc_fold_2  auc_fold_3  auc_fold_4  auc_fold_5  overall_auc  std_auc
mlruns/669644328659289417/456a959b7aff402d95823731472b15c8/tags/: mlflow.runName
mlruns/669644328659289417/6349b746a6374c93b59f9ef5056ed808/: meta.yaml
mlruns/669644328659289417/6349b746a6374c93b59f9ef5056ed808/tags/: mlflow.runName  mlflow.source.git.commit
notebooks/: 01_eda.ipynb  02_feature_importance.ipynb
outputs/2025-11-24/00-51-57/.hydra/: hydra.yaml
outputs/2025-11-24/00-58-15/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-24/01-02-14/.hydra/: hydra.yaml
outputs/2025-11-24/01-30-44/.hydra/: hydra.yaml
outputs/2025-11-24/01-43-38/.hydra/: config.yaml  (+2 more)
src/: blend.py  blend_final.py  blend_galaxy.py  blend_rank.py  blend_v2.py  diagnosis.py  feature_engineering.py  hill_climbing.py  mass_blending.py  pseudo_label.py  residual_boosting.py  stacking.py  train_mlp.py  train_mlp_kfold.py  train_with_original.py  training.py  tune.py
(+11 files in other folders)
