[project]
name = "predicting-loan-payback"
version = "0.1.0"
description = ""
authors = [
    {name = "franck aldrick",email = "nana.franck2015@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "mlflow (>=3.6.0,<4.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "shap (>=0.50.0,<0.51.0)"
]

[tool.poetry]
packages = [{include = "predicting_loan_payback", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "notebook (>=7.5.0,<8.0.0)"
]
